--- a/reference_card/emergentreference.tex
+++ b/reference_card/emergentreference.tex
@@ -80,9 +80,9 @@ and Cmd+V is paste while Ctrl+V is Page Down. \\
 \verb!Ctrl+E!    & Move cursor to last character \\
 \verb!Ctrl+D!  & Delete item in focus or all selected items. \\
 \verb!Ctrl+G!  & Deselect text or tree selection. \\
-\verb!Ctrl+X! & Cut. \\
-\verb!Ctrl+C! & Copy. \\
-\verb!Ctrl+V! & Paste.
+\verb!Ctrl+X/W! & Cut. \\
+\verb!Ctrl+C/Alt+W! & Copy. \\
+\verb!Ctrl+V/Y! & Paste.
 \end{tabular}
 
 \section{Global project}
@@ -102,17 +102,14 @@ and Cmd+V is paste while Ctrl+V is Page Down. \\
 \includegraphics[width=91px]{treebrowser.png}   & \includegraphics[width=150px]{programcode.png}
 \end{tabular}
 \begin{tabular}{@{}ll@{}}
-\verb!Standard!    & Page, Ctrl+Space/F/B/N/P/D/G/X/C/V \\
-\verb!Any 1-3 chars!    & Find as you type \\
+\verb!Standard!    & Page,Ctrl+Space/F/B/N/P/D/G/X/W/C/V/Y. \\
+\verb!Any 1-3 chars!    & Find as you type. Moves cursor to next matching line. \\
 \verb!Ctrl+I!    & New item below cursor. \\
 \verb!Alt+F!  & Find from selected node. \\
 \verb!Ctrl+M!  & Duplicate element(s). \\
 \end{tabular}
 
 \subsection{New elements in project tree}
-The project tree contains the most important organizational elements
-of an emergent project. These include Wizards, DataTables, Programs
-and Networks.
 \begin{tabular}{@{}ll@{}}
 \verb!do Ctrl+I!    & New Doc \\
 \verb!da Ctrl+I!    & New DataTable \\
@@ -124,10 +121,7 @@ and Networks.
 \end{tabular}
 
 \subsection{New elements in program tree}
-You can quickly create all kinds of programming elements using these
-sequences. You can write entire programs without using the
-mouse. Press Ctrl+left,left afterwards to navigate back to where you
-were.
+These sequences insert new items. Press Ctrl+left,left afterwards to navigate back to where you were. \\
 \begin{tabular}{@{}ll@{}}
 \verb!obj Ctrl+I Type!    & New obj of Type \\
 \verb!var Ctrl+I!    & New var \\
@@ -148,40 +142,31 @@ fields of edit panels.
 \verb!Up/Down arrow!    & (dropdown) Move up/down. \\
 \verb!ESC!    & Revert changes. \\
 \verb!Ctrl+Enter!    & Apply changes. \\
-\verb!Space!    & Open token chooser and check/uncheck flag.\\
+\verb!Space!    & Open token chooser and Check/uncheck flag.\\
 \verb!Ctrl+L!    & (expression fields) Lookup information. \\
 \end{tabular}
 
 \section{Help Browser}
-The Help Browser allows you to browse emergent\'s classes, including
-wiki documentation for classes and direct links to the source code of
-any object.
-
 \includegraphics[width=240px]{helpbrowser.png}
 \begin{tabular}{@{}ll@{}}
-\verb!Standard!  & Page, Ctrl+N/P/A/E. \\
+\verb!Standard nav!  & Tab,Page,Ctrl+F/B/N/P/A/E/X/W/C/V/Y. \\
 \verb!F1!  & Help Browser. \\
 \verb!Ctrl+S!  & Toggle Search/Find focus. \\
 \end{tabular}
 
 \section{DataTables and matrices}
-DataTables are spreadsheet-like container objects for strings, scalars
-and matrices. Clicking on a matrix cell of the DataTable (top grid)
-enables the matrix view (bottom grid). Matrices can have up to seven
-dimensions. Use DataTable->Get/SetMatrixVal,GetValAsMatrix.
 \includegraphics[width=215.5px]{datatable.png}
 \begin{tabular}{@{}ll@{}}
-\verb!Standard nav!  & Page, Ctrl+F/B/N/P/A/E/C/V. \\
+\verb!Standard!  & Page,Ctrl+F/B/N/P/A/E/C/V/D/G/Y. \\
 \verb!Ctrl+T!    & Switch between table and matrix focus. \\
-\verb!Ctrl+Space!    & Start editing cell.
+\verb!Ctrl+I!    & Insert new row. \\
+\verb!Ctrl+M!    & Duplicate row. \\
+\verb!Ctrl+spacebar!    & Start editing cell.
 \end{tabular}
 
 \section{css console and text fields}
-The css console allows you to execute css code, which is an
-interpreted subset of c++. All program code is actually css script
-code in the backround.
 \begin{tabular}{@{}ll@{}}
-\verb!Standard!  & Ctrl+F/B/N/P/A/E/X/C/V. \\
+\verb!Standard!  & Ctrl+F/B/N/P/A/E/D/X/W/C/V/Y. \\
 \verb!Ctrl+K! & Kill text until end of line. \\
 \verb!Ctrl+right! & Move cursor one word forward. \\
 \verb!Ctrl+left! & Move cursor one word backwards. \\
@@ -192,7 +177,8 @@ code in the backround.
 \subsection{css console}
 \includegraphics[width=209.5px]{console.png} \\
 \begin{tabular}{@{}ll@{}}
-\verb!Ctrl+L!    & Clear console buffer history/delete highlighted text  \\
+\verb!Ctrl+L!    & Clear console buffer history. \\
+\verb!Ctrl+L!    & Delete highlighted text. \\
 \end{tabular}
 
 \subsection{Text fields}
@@ -203,12 +189,9 @@ code in the backround.
 \end{tabular}
 
 \section{Choosers}
-Choosers are a frequently used meme that allow you to select one from
-a list of many things. The caret (\^) indicates that the beginning of the
-line should match. 
 \includegraphics[width=213px]{progel.png} \\
 \begin{tabular}{@{}ll@{}}
-\verb!Standard!  & Tab, Ctrl+F/B/N/P/A/E/D/X/C/V. \\
+\verb!Standard nav!  & Tab,Ctrl+F/B/N/P/A/E/D/X/W/C/V/Y. \\
 \end{tabular}
 
 \end{multicols}
